19. Network Policy/np-example-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
  - from:                  # first condition
    - podSelector:
        matchLabels:
          app: backend
    ports:                 # second condition 
    - protocol: TCP
      port: 3306
