19. Network Policy/np-example-3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
  - from:                  # first rule
    - podSelector:
        matchLabels:
          app: backend
    ports:                 
    - protocol: TCP
      port: 3306
  - from:                  # second rule
    - podSelector:
        matchLabels:
          app: phpmyadmin
    ports:                 
    - protocol: TCP
      port: 3306
